AddTask/AddTaskTodoMicroservice/manifests-sri/add-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addtask-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      
      containers:
      - name: amazon-add
        image: acr1612.azurecr.io/addtask:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8000
