AddTask/AddTaskTodoMicroservice/manifests-sri/add-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-add-svc
spec:
  selector:
    app: amazon
  ports:
  - port: 80
    targetPort: 8000
